[package]
name = "signal_hook_tokio"
version = "0.1.0"
authors = ["yujinliang <285779289@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = {version = "0.1.11", features=["tokio-support"]}
tokio = "0.1.22"
libc = "0.2.65"
