[package]
name = "anyhow_t"
version = "0.1.0"
authors = ["yujinliang <285779289@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#`https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html`
[dependencies]
thiserror_t = { path = "../thiserror_t"}