[package]
name = "anyhow_t"
version = "0.1.0"
authors = ["yujinliang <285779289@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#`https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html`
[dependencies]
thiserror_t = { path = "../thiserror_t"} #如果thiserror_t crate在其Cargo.toml中[lib]下定义的name与其package name不符，则报错，找不到thiserror_t！
anyhow = "1.0.31"
