[package]
name = "write_c_in_rust"
version = "0.1.0"
authors = ["yujinliang <285779289@qq.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5.4"


[build-dependencies]
cpp_build = "0.5.4"